--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
+    "react-query": "^3.3.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-swipeable-views": "^0.13.9",
