--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@xeokit/xeokit-sdk": "^1.5.0",
+    "@xeokit/xeokit-sdk": "^1.5.3",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -40,6 +45,7 @@
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "6.1.1",
+    "form-data": "^3.0.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "http-proxy-middleware": "^1.0.6",
@@ -48,7 +54,9 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "lbd-api": "git://github.com/LBDserver/API.git",
     "mini-css-extract-plugin": "0.11.3",
+    "module-alias": "^2.2.2",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -73,6 +81,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
+    "typescript": "^4.1.3",
     "url-loader": "4.1.1",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4",
@@ -113,11 +122,11 @@
         "module-resolver",
         {
           "root": [
-            "./src"
+            "."
           ],
           "alias": {
             "@components": "./src/components",
-            "@context": "./src/context/appContext.js",
+            "@context": "./src/context",
             "@util": "./src/util",
             "@styles": "./src/styles",
             "@functions": "./src/functions"
@@ -127,6 +136,9 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.10",
+    "@types/form-data": "^2.5.0",
+    "@types/react-router-dom": "^5.1.7",
     "babel": "^6.23.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
