--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "lbd-api": "git://github.com/LBDserver/API.git",
+    "lbd-server": "^0.1.0",
+    "lbdapi": "git://github.com/LBDserver/API.git",
     "mini-css-extract-plugin": "0.11.3",
     "module-alias": "^2.2.2",
     "optimize-css-assets-webpack-plugin": "5.0.4",
