--- a/package.json
+++ b/package.json
@@ -82,13 +82,16 @@
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "^4.1.3",
+    "unzipper": "^0.10.11",
     "url-loader": "4.1.1",
+    "use-object-url": "^1.0.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "workbox-webpack-plugin": "5.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
