--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.12.3",
     "@comunica/actor-init-sparql": "^1.18.0",
     "@frogcat/ttl2jsonld": "0.0.6",
+    "@inrupt/solid-client-authn-browser": "^1.4.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -77,6 +78,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
+    "solid-auth-fetcher": "^1.3.5",
     "sparqlalgebrajs": "^2.4.0",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
