--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.12.3",
     "@comunica/actor-init-sparql": "^1.18.0",
     "@frogcat/ttl2jsonld": "0.0.6",
+    "@inrupt/solid-client": "^1.3.0",
     "@inrupt/solid-client-authn-browser": "^1.4.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -55,7 +56,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "lbd-server": "^0.1.4",
+    "lbd-server": "file:../API",
     "mini-css-extract-plugin": "0.11.3",
     "module-alias": "^2.2.2",
     "optimize-css-assets-webpack-plugin": "5.0.4",
