--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "lbd-server": "file:../API",
+    "lbd-solid": "^0.1.1",
     "mini-css-extract-plugin": "0.11.3",
     "module-alias": "^2.2.2",
     "optimize-css-assets-webpack-plugin": "5.0.4",
